--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <canvas id="canvas"></canvas>
   <canvas id="canvas2D"></canvas>
+  <canvas id="canvasMap"></canvas>
 
   <div class="overlay" id="posButton">
     <input type="checkbox" id="markerFound" name="marker"
@@ -46,10 +47,12 @@
   </video>
 
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.min.js" type="text/javascript"></script>
+  <script src="https://unpkg.com/mappa-mundi@0.0.5/dist/mappa.js" type="text/javascript"></script>
+
   <script src="js/libs/three.min.js"></script>
   <script src="js/libs/OrbitControls.js"></script>
   <script src="js/libs/OBJLoader.js"></script>
-  <script src="js/libs/Raycaster.js"></script>
   <script src="js/libs/ColladaLoader.js"></script>
 
   <script type="module" src='js/main.js'></script>
